<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:divider="@drawable/empty_tall_divider">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <ImageView
            android:id="@+id/back_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"/>

        <TextView
            android:id="@+id/registrar_title"
            android:layout_width="371dp"
            android:layout_height="59dp"
            android:text="@string/registrarse_title"
            android:textAlignment="center"
            android:textColor="@color/main_text"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/nombre_text"
        android:layout_width="353dp"
        android:layout_height="38dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/nombre_label"
        android:textAllCaps="false"
        android:textColor="@color/principal"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@+id/nombre_input" />

    <EditText
        android:id="@+id/nombre_input"
        style="@style/spinner_style"
        android:layout_width="353dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/principal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/edad_text"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/custom_input"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/roboto"
                android:text="@string/edad_label"
                android:textAllCaps="false"
                android:textColor="@color/principal"
                android:textSize="21sp"
                app:layout_constraintTop_toBottomOf="@+id/edad_input" />

            <EditText
                android:id="@+id/edad_input"
                style="@style/spinner_style"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/principal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/genero_text"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/custom_input"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/roboto"
                android:text="@string/genero_label"
                android:textAllCaps="false"
                android:textColor="@color/principal"
                android:textSize="21sp"
                app:layout_constraintTop_toBottomOf="@+id/genero_spinner" />

            <Spinner
            android:id="@+id/genero_spinner"
            android:theme="@style/mySpinnerItemStyle"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:prompt="@string/genero_label"
            android:spinnerMode="dialog"
            android:textColor="@color/principal"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/email_text"
        android:layout_width="350dp"
        android:layout_height="38dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/genero_label"
        android:textAllCaps="false"
        android:textColor="@color/principal"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />
    <EditText
        android:id="@+id/email_input"
        style="@style/spinner_style"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/principal" />
    <TextView
        android:id="@+id/contrasena_text"
        android:layout_width="350dp"
        android:layout_height="38dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/contrasena_label"
        android:textAllCaps="false"
        android:textColor="@color/principal"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@+id/contrasena_input" />
    <EditText
        android:id="@+id/contrasena_input"
        style="@style/spinner_style"
        android:layout_width="353dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/principal" />
    <TextView
        android:id="@+id/contrasena_confirmacion_text"
        android:layout_width="350dp"
        android:layout_height="38dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/confirmacion_de_contrasena_label"
        android:textAllCaps="false"
        android:textColor="@color/principal"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@+id/contrasena_confirmacion_input" />
    <EditText
        android:id="@+id/contrasena_confirmacion_input"
        style="@style/spinner_style"
        android:layout_width="353dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/principal" />

    <CheckBox
        android:id="@+id/terminos_condiciones_check_box"
        android:layout_width="353dp"
        android:layout_height="65dp"
        android:ems="10"
        android:text="Aceptar términos y condiciones"
        android:textColor="@color/principal"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/politica_datos_check_box"
        android:layout_width="353dp"
        android:layout_height="64dp"
        android:ems="10"
        android:text="Aceptar política de tratamiento de datos personales"
        android:textColor="@color/principal"
        android:textSize="20sp" />

    <Button
        android:id="@+id/registrar"
        android:layout_width="353dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/principal"
        android:text="@string/registrar_title"
        android:textSize="20sp"
        app:cornerRadius="13sp" />
</LinearLayout>
