<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="6"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="30dp"
        android:paddingEnd="10dp"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:id="@+id/back_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow" />

            <TextView
                android:id="@+id/registrar_title"
                android:layout_width="340dp"
                android:layout_height="59dp"
                android:text="@string/ingresar_title"
                android:textAlignment="center"
                android:textColor="@color/main_text"
                android:textSize="45sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/email_ingreso_text"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/custom_input"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto"
            android:text="Correo electrónico"
            android:textAllCaps="false"
            android:textColor="@color/principal"
            android:textSize="21sp"
            app:layout_constraintTop_toBottomOf="@+id/email_ingreso_input" />

        <EditText
            android:id="@+id/email_ingreso_input"
            style="@style/spinner_style"
            android:layout_width="353dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/principal" />

        <TextView
            android:id="@+id/contrasena_ingreso_text"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/custom_input"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto"
            android:text="Contraseña"
            android:textAllCaps="false"
            android:textColor="@color/principal"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrasena_ingreso_input" />

        <EditText
            android:id="@+id/contrasena_ingreso_input"
            style="@style/spinner_style"
            android:layout_width="353dp"
            android:layout_height="65dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/principal" />

        <TextView
            android:id="@+id/olvidar_contrasena_label"
            android:layout_width="371dp"
            android:layout_height="59dp"
            android:text="@string/olvidar_contrasena_label"
            android:textAlignment="textEnd"
            android:gravity="bottom"
            android:textColor="@color/main_text"
            android:textSize="21sp"
            tools:ignore="RtlCompat" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center"
            android:id="@+id/crear_cuenta_layout">
            <TextView
                android:id="@+id/no_cuenta_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_tiene_cuenta_label"
                android:textAlignment="center"
                android:textColor="@color/main_text"
                android:textSize="21sp" />
            <TextView
                android:id="@+id/creala_cuenta_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crear_cuenta_aqui_label"
                android:textAlignment="center"
                android:textColor="@color/main_text"
                android:textSize="21sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <Button
            android:id="@+id/ingresar_login"
            android:layout_width="353dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/principal"
            android:text="@string/ingresar_title"
            android:textSize="20sp"
            app:cornerRadius="13sp" />
    </LinearLayout>



</LinearLayout>
